--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.42",
+    "expo-constants": "~17.0.8",
+    "expo-location": "^18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-config": "^1.5.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
