chore: update dependencies in package.json
- upgraded expo to ^53.0.9
- upgraded expo-constants to ^17.1.6
- upgraded expo-location to ^18.1.5
- upgraded expo-status-bar to ^2.2.3
- upgraded react to 19.0.0
- upgraded react-native to ^0.79.2
- upgraded react-native-webview to ^13.13.5
- updated devDependencies:
  - @babel/cli to ^7.27.2
  - @babel/core to ^7.27.1
  - @babel/preset-env to ^7.27.2
  - @babel/preset-react to ^7.27.1
  - @types/axios to ^0.9.36
  - @types/react to ~19.0.10
  - @types/react-native to ^0.72.8
  - babel-preset-expo to ~13.0.0
  - typescript to ~5.8.3

--- a/app/app.json
+++ b/app/app.json
@@ -28,7 +28,9 @@
     "extra": {
       "eas": {
         "projectId": "b9396283-6803-4a93-b1a0-767bc5ce97fd"
-      }
+        
+      },
+      "GOOGLE_API_KEY": "AIzaSyC1Z2VwLVClw7WX-XYOIzJbN_a6WYauXOM"
     }
   }
 }
