--- a/app/package.json
+++ b/app/package.json
@@ -11,20 +11,26 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "expo": "~52.0.42",
-    "expo-constants": "~17.0.8",
-    "expo-location": "^18.0.10",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "expo": "^53.0.9",
+    "expo-constants": "^17.1.6",
+    "expo-location": "^18.1.5",
+    "expo-status-bar": "^2.2.3",
+    "react": "19.0.0",
+    "react-native": "^0.79.2",
     "react-native-config": "^1.5.5",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "@babel/cli": "^7.27.2",
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@types/axios": "^0.9.36",
+    "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
+    "babel-preset-expo": "~13.0.0",
+    "react-native-dotenv": "^3.4.11",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
