--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/stack": "^7.3.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "expo": "^53.0.9",
@@ -18,6 +21,13 @@
     "react": "19.0.0",
     "react-native": "^0.79.2",
     "react-native-config": "^1.5.5",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-keychain": "^10.0.0",
+    "react-native-navigation": "^7.47.0",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
     "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
@@ -28,6 +38,7 @@
     "@types/axios": "^0.9.36",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-keychain": "^3.0.0",
     "babel-preset-expo": "~13.0.0",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.8.3"
