--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,7 @@
     "react": "19.0.0",
     "react-native": "^0.79.2",
     "react-native-config": "^1.5.5",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^10.0.0",
     "react-native-navigation": "^7.47.0",
