feat: add new components including Collapsible, ExternalLink, HapticTab, HelloWave, ParallaxScrollView, ThemedText, and ThemedView
feat: implement IconSymbol for iOS and fallback for Android and web

feat: create BlurTabBarBackground for iOS with support for bottom tab overflow

chore: define color constants for light and dark themes

chore: set up ESLint configuration for the project

fix: implement useColorScheme hook for web compatibility

feat: add useThemeColor hook for dynamic theming

chore: initialize package.json with dependencies and scripts

chore: create reset-project script for project setup

chore: configure TypeScript with paths and strict settings

--- a/app/app.json
+++ b/app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "app",
-    "slug": "app",
+    "name": "Worky",
+    "slug": "worky-iytespjw7cjxfbeivckr",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,10 +27,8 @@
     },
     "extra": {
       "eas": {
-        "projectId": "b9396283-6803-4a93-b1a0-767bc5ce97fd"
-        
-      },
-      "GOOGLE_API_KEY": "AIzaSyC1Z2VwLVClw7WX-XYOIzJbN_a6WYauXOM"
-    }
+        "projectId": "68918df1-6996-488d-b93f-661552862402"
+      }    },
+    "owner": "sachintha_wso2"
   }
 }
