--- a/app/package.json
+++ b/app/package.json
@@ -37,11 +37,17 @@
     "@babel/preset-react": "^7.27.1",
     "@types/axios": "^0.9.36",
     "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8",
     "@types/react-native-keychain": "^3.0.0",
     "babel-preset-expo": "~13.0.0",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
